build: default vscode settings update

--- a/.vscode/default.settings.json
+++ b/.vscode/default.settings.json
@@ -1,6 +1,8 @@
 {
+  "eslint.enable": true,
   "workbench.colorCustomizations": {
     "statusBar.background": "#00ACD7",
+    "statusBarItem.hoverBackground": "#0096BC",
     "statusBar.foreground": "#282C34"
   }
 }
