--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,15 @@
       "mode": "auto",
       "program": "${workspaceFolder}",
       "env": {},
+      "args": ["3000"]
+    },
+    {
+      "name": "Start verbose",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}",
+      "env": {},
       "args": ["3000"],
       "trace": "verbose"
     }
